testsuite/tests/parser/should_fail/T7848.stderr

T7848.hs:6:1: error:
    • Occurs check: cannot construct the infinite type:
        t ~ t0 -> t1 -> A -> A -> A -> A -> t2 -> t
    • When checking that:
          t0 -> t1 -> A -> A -> A -> A -> forall t2. t2 -> t
        is more polymorphic than: t
    • Relevant bindings include x :: t (bound at T7848.hs:6:1)

T7848.hs:10:9: error:
    • Couldn't match expected type ‘t’ with actual type ‘a’
        because type variable ‘a’ would escape its scope
      This (rigid, skolem) type variable is bound by
        the type signature for:
          (&) :: a
        at T7848.hs:10:9-35
    • In the SPECIALISE pragma {-# SPECIALIZE (&) :: a #-}
      In an equation for ‘x’:
          x (+) ((&)@z) ((:&&) a b) (c :&& d) (e `A` f) (A g h)
            = y
            where
                infixl 3 `y`
                y _ = (&)
                {-# INLINE (&) #-}
                {-# SPECIALIZE (&) :: a #-}
                (&) = x
    • Relevant bindings include x :: t (bound at T7848.hs:6:1)
